--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
-<html>
+<html ng-app="app">
 	<body>
 	something
+      
+      <div ng-view>
+          <!--Route Templates will replace this-->
+      </div>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.3/angular-route.js"></script>
 		<script src="app/app.js"></script>
 		<script src="app/ListController.js"></script>
 		<script src="app/DataService.js"></script>
 		<script src="app/DetailsController.js"></script>
 		<script src="app/SettingsController.js"></script>
+        <script src="app/AdminController.js"></script>
 	</body>
 <html>
